src/objects/Profit_Centre__c.object
<CustomObject>
    <fields>
        <fullName>Parent_Profit_Centre__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Profit Centre</label>
        <referenceTo>Profit_Centre__c</referenceTo>
        <relationshipLabel>Profit Centres</relationshipLabel>
        <relationshipName>Profit_Centres</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProfitCenterCode__c</fullName>
        <description>The profit center code i.e. 4B</description>
        <externalId>true</externalId>
        <inlineHelpText>The profit center code i.e. 4B</inlineHelpText>
        <label>Profit Center Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Profit_Center_Code_Chain__c</fullName>
        <description>This field contains the code chain of profit center</description>
        <inlineHelpText>This field contains the code chain of profit center</inlineHelpText>
        <label>Profit Center Code Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Dashboard_Sort_Order__c</fullName>
        <label>Sales Dashboard Sort Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Profit Centre</label>
    <nameField>
        <label>Profit Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profit Centres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>